--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -6,7 +6,7 @@
   width: 100%;
   background: rgba(0, 0, 0, 0.5);
   transition: opacity .5s ease;
-  z-index: 10;
+  z-index: -100;
 }
 
 .nav {
@@ -24,6 +24,7 @@
 
 .active.navWrapper {
   opacity: 1;
+  z-index: 10
 }
 
 .active.nav {
@@ -38,6 +39,9 @@
 
 .navButton {
   color: white;
+}
+.navButton:hover {
+  cursor: pointer;
 }
 
 @media (min-width: 768px) {
